--- a/automation/pyproject.toml
+++ b/automation/pyproject.toml
@@ -13,7 +13,16 @@ typer = "^0.7.0"
 loguru = "^0.6.0"
 pydantic = "^1.10.5"
 
+[tool.poetry.group.dev.dependencies]
+isort = "^5.12.0"
+black = "^23.1.0"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 120
+
+[tool.isort]
+profile = "black"
