--- a/automation/pyproject.toml
+++ b/automation/pyproject.toml
@@ -12,6 +12,7 @@ pyyaml = "^6.0"
 typer = "^0.7.0"
 loguru = "^0.6.0"
 pydantic = "^1.10.5"
+df-gettext-toolkit = {url = "https://github.com/dfint/df-gettext-toolkit/releases/download/0.4.0/df_gettext_toolkit-0.4.0-py3-none-any.whl"}
 
 [tool.poetry.group.dev.dependencies]
 isort = "^5.12.0"
