--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,8 @@ on:
   workflow_dispatch:
   repository_dispatch:
     types: [update]
+  schedule:
+    - cron: "0 1 * * *"
 
 permissions:
   contents: write
