--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,13 +41,13 @@ jobs:
 
     - name: Install library and dependencies
       run: |
-        cd automation/progress
+        cd automation
         poetry install --no-interaction --no-dev
 
     - name: Download and process po files
       run: |
         cd automation
-        poetry run python -m automation.download ../
+        poetry run python -m automation.process ../
 
     - name: Push changes to the repository
       uses: EndBug/add-and-commit@v9.1.1
