--- a/automation/pyproject.toml
+++ b/automation/pyproject.toml
@@ -27,3 +27,7 @@ line-length = 120
 
 [tool.isort]
 profile = "black"
+
+[tool.poetry.scripts]
+# poetry run process ../
+process = "automation.process:app"
