--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,23 +21,15 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Install Poetry
+      run: pipx install poetry
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
-
-    - name: Install Poetry
-      uses: snok/install-poetry@v1.3.3
-      with:
-        virtualenvs-create: true
-        virtualenvs-in-project: true
-
-    - name: Load cached venv
-      id: cached-poetry-dependencies
-      uses: actions/cache@v3
-      with:
-        path: automation/.venv
-        key: venv-${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}
+        cache: "poetry"
+        cache-dependency-path: automation/poetry.lock
 
     - name: Install library and dependencies
       run: |
