Fix pydantic 2.0 compatibility, update pydantic

--- a/automation/pyproject.toml
+++ b/automation/pyproject.toml
@@ -10,7 +10,7 @@ python = "^3.10"
 httpx = "^0.24.1"
 typer = "^0.7.0"
 loguru = "^0.7.0"
-pydantic = "<2.0"
+pydantic = "^2.0"
 df-gettext-toolkit = {url = "https://github.com/dfint/df-gettext-toolkit/releases/download/0.5.0/df_gettext_toolkit-0.5.0-py3-none-any.whl"}
 strictyaml = "^1.7.3"
 
