--- a/automation/pyproject.toml
+++ b/automation/pyproject.toml
@@ -13,6 +13,7 @@ loguru = "^0.7.0"
 pydantic = "^2.0"
 df-gettext-toolkit = {url = "https://github.com/dfint/df-gettext-toolkit/releases/download/0.5.0/df_gettext_toolkit-0.5.0-py3-none-any.whl"}
 strictyaml = "^1.7.3"
+viscii-codec = {url = "https://github.com/dfint/viscii_codec/releases/download/0.1.0/viscii_codec-0.1.0-py3-none-any.whl"}
 
 [tool.poetry.group.dev.dependencies]
 isort = "^5.12.0"
