--- a/.github/workflows/dry-run.yml
+++ b/.github/workflows/dry-run.yml
@@ -2,7 +2,7 @@ name: Dry run
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
     paths:
     - 'automation/pyproject.toml'
     - 'automation/poetry.lock'
