--- a/automation/pyproject.toml
+++ b/automation/pyproject.toml
@@ -39,3 +39,5 @@ profile = "black"
 [tool.poetry.scripts]
 # poetry run process ../
 process = "automation.process:app"
+# poetry run progress_diagram ../translations-backup/translations/dwarf-fortress-steam ../images/dwarf-fortress-steam.svg
+progress_diagram = "automation.progress_diagram:app"
