--- a/.github/workflows/dry-run.yml
+++ b/.github/workflows/dry-run.yml
@@ -2,7 +2,7 @@ name: Dry run
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
     paths:
     - 'automation/pyproject.toml'
     - 'automation/poetry.lock'
@@ -23,20 +23,16 @@ jobs:
   process-translations:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        python-version: ["3.10"]
-
     steps:
     - uses: actions/checkout@v3
 
     - name: Install Poetry
       run: pipx install poetry
 
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: 3.*
         cache: "poetry"
         cache-dependency-path: automation/poetry.lock
 
@@ -54,3 +50,8 @@ jobs:
       run: |
         cd automation
         poetry run process ../
+
+    - name: Generate diagram
+      run: |
+        cd automation
+        poetry run progress_diagram ../translations-backup/translations/dwarf-fortress-steam ../images/dwarf-fortress-steam.svg
