--- a/automation/pyproject.toml
+++ b/automation/pyproject.toml
@@ -14,11 +14,12 @@ strictyaml = "^1.7.3"
 aiofiles = "^23.1.0"
 df-gettext-toolkit = {version = "^0.6.3", source = "dfint"}
 viscii-codec = {version = "^0.1.0", source = "dfint"}
+langcodes = {extras = ["data"], version = "^3.3.0"}
+scour = "^0.38.2"
 
 [tool.poetry.group.dev.dependencies]
 isort = "^5.12.0"
 black = "^23.3.0"
-
 
 [[tool.poetry.source]]
 name = "dfint"
@@ -38,3 +39,5 @@ profile = "black"
 [tool.poetry.scripts]
 # poetry run process ../
 process = "automation.process:app"
+# poetry run progress_diagram ../translations-backup/translations/dwarf-fortress-steam ../images/dwarf-fortress-steam.svg
+progress_diagram = "automation.progress_diagram:app"
