--- a/.github/workflows/dry-run.yml
+++ b/.github/workflows/dry-run.yml
@@ -54,4 +54,4 @@ jobs:
     - name: Generate diagram
       run: |
         cd automation
-        poetry run progress_diagram ../translations-backup/translations/dwarf-fortress-steam ../images/dwarf-fortress-steam.svg
+        poetry run progress_diagram ../translations-backup/translations/dwarf-fortress-steam ../images/dwarf-fortress-steam-short.svg --minimal-percent=1 --width=600 --height=320
