--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: 3.*
+        python-version: 3.11
         cache: "poetry"
         cache-dependency-path: automation/poetry.lock
 
