Add Russian with cp866 encoding

--- a/config.yaml
+++ b/config.yaml
@@ -70,6 +70,10 @@ languages:
     code: ru
     encoding: cp1251
 
+  - name: Russian (cp866)
+    code: ru
+    encoding: cp866
+
   - name: Spanish
     code: es
     encoding: cp850
