--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,16 @@ on:
   repository_dispatch:
     types: [update]
 
+  push:
+    branches:
+      - main
+    paths:
+      - 'automation/pyproject.toml'
+      - 'automation/poetry.lock'
+      - '**.py'
+      - 'config.yaml'
+      - '.github/workflows/build.yml'
+
   pull_request:
     branches:
       - main
@@ -58,14 +68,14 @@ jobs:
         poetry run progress_diagram ../translations-backup/translations/dwarf-fortress-steam ../images/dwarf-fortress-steam-short.svg --minimal-percent=1 --width=600 --height=320
 
     - name: Push changes to the repository
-      if: github.event_name != 'pull_request'
+      if: github.event_name != 'pull_request' && github.event_name != 'push'
       uses: EndBug/add-and-commit@v9.1.4
       with:
         author_name: github-actions[bot]
         author_email: 41898282+github-actions[bot]@users.noreply.github.com
 
   trigger-update-data:
-    if: github.event_name != 'pull_request'
+    if: github.event_name != 'pull_request' && github.event_name != 'push'
     needs: process-translations
     runs-on: ubuntu-latest
     timeout-minutes: 60
