--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,9 +8,7 @@ updates:
       dev-dependencies:
         patterns:
           - "pytest*"
-          - "flake8*"
-          - "black"
-          - "isort"
+          - "ruff"
           - "coverage"
 
   - package-ecosystem: "github-actions"
