--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        submodules: true
 
     - name: Install Poetry
       run: pipx install poetry
@@ -50,11 +52,6 @@ jobs:
       run: |
         cd automation
         poetry install --no-interaction --no-dev
-
-    - name: Fetch translations
-      run: |
-        git submodule init
-        git submodule update --remote
 
     - name: Process po files
       run: |
