--- a/automation/pyproject.toml
+++ b/automation/pyproject.toml
@@ -35,6 +35,14 @@ process = "automation.process:app"
 progress_diagram = "automation.progress_diagram:app"
 
 [tool.ruff]
+target-version = "py310"
 line-length = 120
-select = ["E", "W", "F", "C", "I", "B"]
-ignore = ["C408"]
+
+[tool.ruff.lint]
+select = ["ALL"]
+ignore = [
+    "D",
+    "S101",
+    "C408",
+    "T203",
+]
