Include hidden files

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,8 +34,9 @@ jobs:
     - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
-        name: update-data
+        name: data
         path: deploy
+        include-hidden-file: true
 
   deploy_to_gh_pages:
     runs-on: ubuntu-latest
@@ -46,7 +47,7 @@ jobs:
     - name: Download artifact
       uses: actions/download-artifact@v5
       with:
-        name: update-data
+        name: data
         path: deploy
 
     - name: Deploy to Github Pages
