--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
       run: |
         mkdir deploy
         cp -r translation_build deploy/translation_build
-        rm deploy/translation_build/**/errors.txt
+        shopt -s globstar && rm deploy/translation_build/**/errors.txt
         touch deploy/.nojekyll
     
     - name: Upload artifact
