--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ permissions:
   contents: write
 
 jobs:
-  process-translations:
+  produce-csv:
     runs-on: ubuntu-latest
     timeout-minutes: 60
 
@@ -60,6 +60,32 @@ jobs:
         cd automation
         poe process ../
 
+    - name: Upload csv artifact
+      uses: actions/upload-artifact@v5
+      with:
+        name: artifact_csv
+        path: translation_build/csv
+
+    - name: Upload csv_with_objects artifact
+      uses: actions/upload-artifact@v5
+      with:
+        name: artifact_csv
+        path: translation_build/csv_with_objects
+
+  push-changes:
+    needs: produce-csv
+    runs-on: ubuntu-latest
+    timeout-minutes: 60
+    steps:
+    - uses: actions/checkout@v5
+    
+    - name: Download artifacts
+      uses: actions/download-artifact@v5
+      with:
+        pattern: artifact_*
+        merge-multiple: true
+        path: translation_build
+
     - name: Push changes to the repository
       if: ${{ !contains(fromJSON('["push", "pull_request"]'), github.event_name) }}
       uses: EndBug/add-and-commit@v9.1.4
@@ -69,7 +95,7 @@ jobs:
 
   trigger-update-data:
     if: ${{ !contains(fromJSON('["push", "pull_request"]'), github.event_name) }}
-    needs: process-translations
+    needs: push-changes
     runs-on: ubuntu-latest
     timeout-minutes: 60
 
