--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,7 +69,7 @@ jobs:
     - name: Upload csv_with_objects artifact
       uses: actions/upload-artifact@v4
       with:
-        name: artifact_csv
+        name: artifact_csv_with_objects
         path: translation_build/csv_with_objects
 
   push-changes:
