--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,13 +64,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: artifact_csv
-        path: translation_build/csv
-
-    - name: Upload csv_with_objects artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: artifact_csv_with_objects
-        path: translation_build/csv_with_objects
+        path: translation_build
 
   push-changes:
     needs: produce-csv
